All dupates done

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div id="course_container">
         <p id="course_title"><i class="fa-solid fa-circle-info"></i>Course Information</p>
-        <div id = "course_data">
+        <div id="course_data">
           <h3> Syllabus </h3>
           <ol>
             <li>Basic Text Processing: Tokenization, Stemming</li>
@@ -74,19 +74,20 @@
       </div>
       <div id="reference_container">
         <p id="reference_title"><i class="fa-solid fa-circle-info"></i>References</p>
-        <ul>
-          <li>Daniel Jurafsky and James H. Martin. 2021. Speech and Language Processing. 3rd Edition,
-            Link to Live Book -
-            <a href="//web.stanford.edu/~jurafsky/slp3/">link</a>
-          </li>
-          <li>Delip Rao, Brian McMahan, Natural Language Processing with PyTorch: Build Intelligent
-            Language Applications Using Deep Learning. O'Reilly Publishers</li>
-          <li>Hobson Lane, Cole Howard, Hannes Hapke. 2019. Natural Language Processing in Action.
-            Link to Live Book -
-            <a href="//livebook.manning.com/book/natural-language-processing-in-action/about-this-book/">link</a>
-          </li>
-        </ul>
-
+        <div id="reference_data">
+          <ul>
+            <li>Daniel Jurafsky and James H. Martin. 2021. Speech and Language Processing. 3rd Edition,
+              Link to Live Book -
+              <a href="//web.stanford.edu/~jurafsky/slp3/">link</a>
+            </li>
+            <li>Delip Rao, Brian McMahan, Natural Language Processing with PyTorch: Build Intelligent
+              Language Applications Using Deep Learning. O'Reilly Publishers</li>
+            <li>Hobson Lane, Cole Howard, Hannes Hapke. 2019. Natural Language Processing in Action.
+              Link to Live Book -
+              <a href="//livebook.manning.com/book/natural-language-processing-in-action/about-this-book/">link</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
     <div id="rpanel">
