Added pdf of natural language processing using pytorch

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
               <a href="//web.stanford.edu/~jurafsky/slp3/">link</a>
             </li>
             <li>Delip Rao, Brian McMahan, Natural Language Processing with PyTorch: Build Intelligent
-              Language Applications Using Deep Learning. O'Reilly Publishers</li>
+              Language Applications Using Deep Learning. O'Reilly Publishers <a href = "[NLP] Natural Language Processing with PyTorch (2019).pdf" target = "_blank">PDF</a></li>
             <li>Hobson Lane, Cole Howard, Hannes Hapke. 2019. Natural Language Processing in Action.
               Link to Live Book -
               <a href="//livebook.manning.com/book/natural-language-processing-in-action/about-this-book/">link</a>
