--- a/index.html
+++ b/index.html
@@ -21,35 +21,36 @@
   <div id="container">
     <div id="lpanel">
       <p id="c_material"><i class="fa-solid fa-folder-tree"></i>Course Materials</p>
-      <table id="material_table">
-      </table>
+      <div id="material_table">
+        <ul id="my_treeview"></ul>
+      </div>
     </div>
     <div id="cpanel">
       <div id="inst_container">
         <p id="inst_title"><i class="fa-solid fa-chalkboard-user fa-xs"></i>Instructors</p>
         <div id="all_inst">
           <div class="inst_elem">
-            <img class="inst" src="Soumajit_sir.jpg">
+            <img class="inst" src="Assets/Soumajit_sir.jpg">
             <p>Dr. Soumajit Pramanik</p>
             <p>(Instructor)</p>
           </div>
           <div class="inst_elem">
-            <img class="inst" src="Atharva.png">
+            <img class="inst" src="Assets/Atharva.png">
             <p>Atharva Inamdar</p>
             <p>(TA)</p>
           </div>
           <div class="inst_elem">
-            <img class="inst" src="Ranjhit.jpeg">
+            <img class="inst" src="Assets/Ranjhit.jpeg">
             <p>Ranjith Vutnoor</p>
             <p>(TA)</p>
           </div>
           <div class="inst_elem">
-            <img class="inst" src="Kartikeya.jpeg">
+            <img class="inst" src="Assets/Kartikeya.jpeg">
             <p>Kartikeya Saraswat</p>
             <p>(TA)</p>
           </div>
           <div class="inst_elem">
-            <img class="inst" src="sudev.jpeg">
+            <img class="inst" src="Assets/sudev.jpeg">
             <p>Sudev Kumar Padhi</p>
             <p>(TA)</p>
           </div>
@@ -81,7 +82,8 @@
               <a href="//web.stanford.edu/~jurafsky/slp3/">link</a>
             </li>
             <li>Delip Rao, Brian McMahan, Natural Language Processing with PyTorch: Build Intelligent
-              Language Applications Using Deep Learning. O'Reilly Publishers <a href = "[NLP] Natural Language Processing with PyTorch (2019).pdf" target = "_blank">PDF</a></li>
+              Language Applications Using Deep Learning. O'Reilly Publishers <a
+                href="Resourses/[NLP] Natural Language Processing with PyTorch (2019).pdf" target="_blank">PDF</a></li>
             <li>Hobson Lane, Cole Howard, Hannes Hapke. 2019. Natural Language Processing in Action.
               Link to Live Book -
               <a href="//livebook.manning.com/book/natural-language-processing-in-action/about-this-book/">link</a>
@@ -103,10 +105,6 @@
       </div>
     </div>
   </div>
-
-
-
-
 
   <script src="data.js"></script>
   <script src="script.js"></script>
